Some more layout bugs removed

--- a/ghibli-universe/src/components/HomeDisplay.css
+++ b/ghibli-universe/src/components/HomeDisplay.css
@@ -23,14 +23,21 @@
     /* background-attachment: fixed; */
 }
 .slider > h4{
-    margin-left: 30px;
+    padding-left: 30px;
+    padding-right: 20px;
+    padding-top:10px;
+    padding-bottom:10px;
     font-family: 'Times New Roman', Times, serif;
     background-color:#1a1503;
     display:inline-block;
     color: #cccdb4;
 }
 .slider > h3{
-    margin-left: 30px;
+    margin-top: 50px;
+    padding-left: 30px;
+    padding-right: 20px;
+    padding-top:10px;
+    padding-bottom:10px;
     font-family: 'Times New Roman', Times, serif;
     background-color:#1a1503;
     display:inline-block;
